# redai

./: .env  .gitignore  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: build.yml  release.yml
src/: app.rs  coder.rs  config.rs  diff.rs  editor.rs  llm.rs  main.rs  prompts.rs  search.rs  tracker.rs  tree.rs  utils.rs  watcher.rs
