[package]
name = "redai"
version = "0.0.3"
edition = "2024"

[profile.release]
debug = true

[profile.dev.package."*"]
debug = true

[dependencies]
anyhow = "1.0"
color-eyre = "0.6.5"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
ratatui-code-editor = "0.0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
similar = "2.7.0"
imara-diff = "0.2"
async-openai = { version = "0.30", features = ["byot"] }
dotenv = "0.15.0"
indoc = "2.0.6"
tui-tree-widget = "0.24"
notify = "8.1"
regex = "1.11.1"
tempfile = "3.23.0"
rayon = "1.10"
